--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Push Me!" HorizontalAlignment="Left" Margin="263,181,0,0" VerticalAlignment="Top" Width="134" Height="41" Click="Button_Click"/>
+
     </Grid>
 </Window>
